tests/slp27_const_numeric_param_requires_const_bad.stderr
tests/slp27_const_numeric_param_requires_const_bad.sl:2:8: error: SL2084: parameter type const_int/const_float requires the 'const' modifier
