tests/slp27_const_numeric_param_requires_const_bad.sl
fn bad(x const_float) {
	_ = x
}

fn main() {}
